# imagestools

./: .gitignore  README.md
colormapper/: README.md
colormapper/data/: annie-grey2.ini  annie-grey2.json  annie-red.ini  annie-red.json  annie-red2.json
colormapper/src/: colormapper.cpp  colormapper.h
hitbox_editor/: README.md  hitbox.pro  main.cpp
imageresizer/: CMakeLists.txt  ImageInfo.h  ImageItem.cpp  ImageItem.h  ImageResizerApp.cpp  ImageResizerApp.h  ResizeThread.cpp  ResizeThread.h  all.txt  all2.txt  imageresizer.pro  main.cpp
imageslicer/: imageslice.pro  imagesplitter.cpp  imagesplitter.h  main.cpp
imagetrimmer/v1/: CMakeLists.txt  ImageTrimApp.desktop  imageprocessor.h  mainwindow.cpp  mainwindow.h
imagetrimmer/v2/: CMakeLists.txt  imageprocessor.cpp  imagetrimmer.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
imageviewer/: CMakeLists.txt  imageviewer.pro  main.cpp
tile_editor/data/: 545454.json  777.json  888.json  fdfdf.json  gggtrt.json  notes.txt
tile_editor/src/v3/: TileEditor.pro  main.cpp
viewer/: imageviewer.cpp  main.cpp
viewer/shared/: Frame.cpp  FrameSet.h  ss_limits.h
viewer/shared/qtgui/: qfilewrap.cpp  qfilewrap.h
viewer/src/v1/: CMakeLists.txt  imageviewer.h  sheet.cpp  sheet.h  viewer.pro
viewer/src/v1/shared/: Frame.h  FrameSet.cpp  PngMagic.cpp
viewer/src/v2/: CMakeLists.txt  archwrap.cpp  archwrap.h  imageviewer.cpp  imageviewer.h  imginfo.h  mainwindow.cpp  mainwindow.h  thumbitem.cpp  thumbitem.h  thumbnailgrid.cpp  thumbnailgrid.h  thumbnailview.cpp  thumbnailview.h  viewer.pro  ziphandler.cpp  ziphandler.h
